Added comments and check for winner logic

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 			<button id="start-game" onclick="playGame(this)">
 			Start Game</button>
 			
-			<div id="message">Hello</div>
+			<div id="message">Hello, let's play Tic Tac Toe!</div>
 		</div>
 		
 
